# rife-kaggle

./: .env.example  .gitignore  README.md  pyproject.toml
src/rife_kaggle/: __init__.py  __main__.py  cli.py  kaggle.py  notebook.py  slug.py
